2006-07-18  Aaron Bockover  <abock@gnome.org>

	* hal-sharp/HalDevice.cs: Added null checks for Hal.Context to prevent
	crashes in places; happened in new NautilusDriveFactory when dbus was
	down

2006-07-18  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/Makefile.am: Removed a file that I haven't committed
	yet

2006-07-18  Patrick van Staveren  <trick@vanstaveren.us>

	* src/Banshee.Dap/Mtp/MtpDeviceId.cs: sync'd device list with libgphoto

2006-07-17  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/Makefile.am: Added MediaEngine/IEqualizer.cs (left
	out from IEqualizer.cs commit)

2006-07-17  Aaron Bockover  <abock@gnome.org>

	* HACKING: Updated

2006-07-17  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/MediaEngine/IEqualizer.cs: Added an equalizer interface
	that media engines can implement

2006-07-12  Patrick van Staveren  <trick@vanstaveren.us>

	* src/Banshee.Dap/Mtp/GPhotoDevice.cs:
	* src/Banshee.Dap/Mtp/MtpDap.cs: removed a bunch of unnecessary debug
	statements, cleaned up device detection so that it only happens when
	necessary.  Also removed SetOwner method so that Banshee doesn't allow
	in UI.

2006-07-12  Ruben Vermeersch  <ruben@Lambda1.be>

	Patch by Bertrand Lorentz <bertrand.lorentz@gmail.com> (BGO #336761)

	* data/banshee.schemas.in: 
	* src/PlayerInterface.cs:
	* src/PlaylistView.cs: Add support for showing a year column and searching
	track by year. The year column visibility defaults to false.

2006-07-11  Ruben Vermeersch  <ruben@Lambda1.be>

	* src/Banshee.Base/Plugins/PluginFactory.cs: Create user plugin dir if it
	doesn't exist. (BGO #346612) Makes life of plugin writers a bit easier as
	they can safely assume the user plugin dir exists.

	* src/Banshee.Plugins/Audioscrobbler/Queue.cs: Remove the unnecessairy
	test to check if the user plugin dir exists.

2006-07-10  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* src/Banshee.Base/Banshee.Cdrom.Gui/RecorderSpeedComboBox.cs:
	Fixed typo 
